fix(deprecation): 清除技术栈升级引入的全部弃用 API (#5)
- RedisConfig: Jackson2JsonRedisSerializer(已弃用待删除) → Jackson 3 的 JacksonJsonRedisSerializer；
  旧版 WRAPPER_ARRAY 类型标注格式的存量键将不可读（均为短期缓存，
  可自然过期或上线时清空 CRS:*）
- RedisUtil: expire/set/setIfAbsent 改用 Duration 重载；bRPop 改走
  connection.listCommands()（DefaultedRedisConnection 已弃用）
- RequestInterceptor/RedisUtil: org.springframework.lang.Nullable → jspecify
- FileUtil/COSUtil: new URL() → URI.create().toURL()（兼容 MalformedURLException/IllegalArgumentException）
- FileServiceImpl/ScoreServiceImpl: Jackson 3 JsonNode.asText() → asString()